# frozen-bubble-sdl3

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeListsEmscripten.txt  README.md  SetupServer.md  WASM_PORT.md  frozen-bubble
.github/workflows/: build.yml  update-itchio.yml
android/: SETUP.md  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/jni/SDL2_mixer/: REVISION.txt
android/app/jni/include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_emscripten.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_ngage.h  SDL_config_os2.h  SDL_config_pandora.h  SDL_config_windows.h  SDL_config_wingdk.h  SDL_config_winrt.h  SDL_config_xbox.h  SDL_copying.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_image.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  (+57 more)
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/frozenbubble/: AdsManager.java  AssetExtractor.java  BillingManager.java  FrozenBubbleActivity.java
android/app/src/main/res/drawable/: tv_banner.xml
android/app/src/main/res/values/: strings.xml
cmake/: Emscripten.cmake
docker/: Dockerfile  docker-compose.yml  nginx.conf  setup.sh
docker/ssl/: .gitignore  fullchain.pem  privkey.pem
server/: CMakeLists.txt  fb-server.c  game.c  log.c  net.c  net.h  stats.c  stats.h  tools.c  win32_compat.h
src/: audiomixer.cpp  audiomixer.h  bubblegame.cpp  bubblegame.h  bubblegame_board.cpp  bubblegame_input.cpp  bubblegame_internal.h  bubblegame_level.cpp  bubblegame_net.cpp  bubblegame_render.cpp  bubblegame_shooter.cpp  bubblegame_state.cpp  frozenbubble.cpp  frozenbubble.h  gamesettings.cpp  gamesettings.h  highscoremanager.cpp  highscoremanager.h  logger.cpp  logger.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu_input.cpp  mainmenu_internal.h  mainmenu_netpanel.cpp  mainmenu_panels.cpp  mainmenu_server.cpp  menubutton.cpp  menubutton.h  networkclient.cpp  networkclient.h  networkclient_wasm.cpp  platform.cpp  platform.h  sdl3_compat.h  shaderstuff.cpp  shaderstuff.h  socket_compat.h  transitionmanager.cpp  (+3 more)
web/: README.md  index.html  shell.html
